[package]
name = "lv8"
version = "0.1.0"
edition = "2021"
description = "LV8 (pronounced levieight) is interpreted dynamically typed programming language. The language is heavily inspired by Lua, Python and Elixir."

[workspace]
members = ["lv8-interpreter", "lv8-parser"]
resolver = "2"

[[bin]]
name = "lv8"
path = "lv8-interpreter/src/main.rs"

[dependencies]
lv8-parser = { path = "lv8-parser" }
clap = { version = "4.5.4", features = ["derive"] }
